--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
                     <img src="https://i.ibb.co/k23vZjy6/tshirt-design.png" alt="Custom T-Shirt">
                     <h3>Mushroom Tee</h3>
                     <p>$29.99</p>
-                    <a href="https://buy.stripe.com/test_4gMcN72K6bn3cFPdCFcs800" target="_blank"><button class="btn" >Buy Now</button></a>
+                    <a target="_blank"><button class="btn" >Coming Soon!</button></a>
+                    <!--  href="https://buy.stripe.com/test_4gMcN72K6bn3cFPdCFcs800"  -->
                 </div>
                 <div class="product-card sticker animate-on-scroll">
                     <img src="https://i.ibb.co/HDSmyJ48/hoodie.png" alt="Custom Hoodie">
                     <h3>FGO Hoodie</h3>
                     <p>$59.99</p>
-                    <a href="https://buy.stripe.com/test_14A5kFckGfDj21b8ilcs801" target="_blank"><button class="btn">Buy Now</button></a>
+                    <a target="_blank"><button class="btn">Coming Soon!</button></a>
+                    <!--  href="https://buy.stripe.com/test_14A5kFckGfDj21b8ilcs801"   -->
                 </div>
                 <div class="product-card sticker animate-on-scroll">
                     <img src="https://i.ibb.co/QF11vCqx/hat.png" alt="Custom Hat">
                     <h3>Trip Hat</h3>
                     <p>$24.99</p>
-                    <a href="https://buy.stripe.com/test_aFacN71G23UB7lvdCFcs802" target="_blank"><button class="btn">Coming Soon!</button></a>
+                    <a target="_blank"><button class="btn">Coming Soon!</button></a>
+                    <!--  href="https://buy.stripe.com/test_aFacN71G23UB7lvdCFcs802"   -->
                 </div>
             </div>
         </section>
