--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
         <nav class="navbar">
             <a href="index.html" class="logo">
-                <img src="https://i.ibb.co/KzyLzfKR/FGO-logo.png" alt="Fat Globs Only Logo">
+                <img src="./Images/Updated-FGO-Logo.png" alt="Fat Globs Only Logo" class="navbar-logo">
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Merch</a></li>
