addition of mobile hamburger menu

--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Merch</a></li>
-                <li><a href="weed.html">Weed</a></li>
+                <!--<li><a href="weed.html">Weed</a></li>-->
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <button class="hamburger-menu" aria-label="Open navigation menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </nav>
     </header>
+
+    <div class="mobile-nav">
+        <a href="index.html">Merch</a>
+        <!--<a href="weed.html">Weed</a>-->
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
     <main>
         <section class="hero">
@@ -40,22 +52,19 @@
                     <h3>Mushroom Tee</h3>
                     <p>$29.99</p>
                     <a target="_blank"><button class="btn" >Coming Soon!</button></a>
-                    <!--  href="https://buy.stripe.com/test_4gMcN72K6bn3cFPdCFcs800"  -->
-                </div>
+                    </div>
                 <div class="product-card sticker animate-on-scroll">
                     <img src="https://i.ibb.co/HDSmyJ48/hoodie.png" alt="Custom Hoodie">
                     <h3>FGO Hoodie</h3>
                     <p>$59.99</p>
                     <a target="_blank"><button class="btn">Coming Soon!</button></a>
-                    <!--  href="https://buy.stripe.com/test_14A5kFckGfDj21b8ilcs801"   -->
-                </div>
+                    </div>
                 <div class="product-card sticker animate-on-scroll">
                     <img src="https://i.ibb.co/QF11vCqx/hat.png" alt="Custom Hat">
                     <h3>Trip Hat</h3>
                     <p>$24.99</p>
                     <a target="_blank"><button class="btn">Coming Soon!</button></a>
-                    <!--  href="https://buy.stripe.com/test_aFacN71G23UB7lvdCFcs802"   -->
-                </div>
+                    </div>
             </div>
         </section>
     </main>
