--- a/weed.html
+++ b/weed.html
@@ -52,7 +52,7 @@
     <header class="main-header">
         <nav class="navbar">
             <a href="index.html" class="logo">
-                <img src="https://i.ibb.co/KzyLzfKR/FGO-logo.png" alt="Fat Globs Only Logo">
+                <img src="./Images/Updated-FGO-Logo.png" alt="Fat Globs Only Logo" class="navbar-logo">
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Merch</a></li>
@@ -60,8 +60,20 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
+            <button class="hamburger-menu" aria-label="Open navigation menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
         </nav>
     </header>
+
+    <div class="mobile-nav">
+        <a href="index.html">Merch</a>
+        <a href="weed.html">Weed</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </div>
 
     <main>
         <section class="content-section page-content">
