Change product images

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </div>
             <div class="product-grid">
                 <div class="product-card sticker animate-on-scroll">
-                    <img src="https://i.ibb.co/k23vZjy6/tshirt-design.png" alt="Custom T-Shirt">
-                    <h3>Mushroom Tee</h3>
+                    <img src="./Images/trip_shirt.png" alt="Custom T-Shirt">
+                    <h3>Trip Tee</h3>
                     <p>$29.99</p>
                     <a target="_blank"><button class="btn" >Coming Soon!</button></a>
                     </div>
@@ -60,8 +60,8 @@
                     <a target="_blank"><button class="btn">Coming Soon!</button></a>
                     </div>
                 <div class="product-card sticker animate-on-scroll">
-                    <img src="https://i.ibb.co/QF11vCqx/hat.png" alt="Custom Hat">
-                    <h3>Trip Hat</h3>
+                    <img src="./Images/fgo_hat.jpeg" alt="Custom Hat">
+                    <h3>FGO Hat</h3>
                     <p>$24.99</p>
                     <a target="_blank"><button class="btn">Coming Soon!</button></a>
                     </div>
