fix sweatshirt image

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a target="_blank"><button class="btn" >Coming Soon!</button></a>
                     </div>
                 <div class="product-card sticker animate-on-scroll">
-                    <img src="https://i.ibb.co/HDSmyJ48/hoodie.png" alt="Custom Hoodie">
+                    <img src="./Images/hoodie.png" alt="Custom Hoodie">
                     <h3>FGO Hoodie</h3>
                     <p>$59.99</p>
                     <a target="_blank"><button class="btn">Coming Soon!</button></a>
